--- a/package.json
+++ b/package.json
@@ -30,10 +30,7 @@
     "turntable.fm"
   ],
   "main": "./src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/sliced-bagels/Turntable-API.git"
-  },
+  "repository": "github:sliced-bagels/Turntable-API",
   "scripts": {
     "start": "node --require dotenv/config ./examples/chat_bot.mjs"
   }
